<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JA-GOTT</string>
    <string name="app_description">DEINE SEITE ZUM AUFTANKEN</string>
    <string name="title_section1">Heute</string>
    <string name="title_section2">Archiv</string>
    <string name="title_section3">Team</string>
    <string name="title_section4">Erinnerung</string>
    <string name="title_section5">Favoriten</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_save">Speichern</string>
    <string name="action_share">Teilen</string>
    <string name="action_refresh">Aktualisieren</string>
    <string name="action_settings">Einstellungen</string>
    <string name="date">-</string>
    <string name="message">    Lade…   </string>
    <string name="more">mehr…</string>
    <string name="mail">info@ja-gott.de</string>
    <string name="content_desciption">Hier sollte ein Bild zu sehen sein</string>
    <string name="error">Es ist ein Fehler aufgetreten. Das tut uns Leid. Sollte das öfter vorkommen, melde dich bitte unter andre@ja-gott.de</string>

    <string name="about_andre">Hola, mein Name ist André Klein und ich wohne im schönen Heidelberg.
        Seit Juni 2016 promoviere ich als Medizininformatiker am Deutschen Krebsforschungszentrum in der Abteilung für medizinische Bildverarbeitung.
        Meine geistliche Heimat habe ich im CVJM Katzweiler.

        Auch wenn ich Informatiker bin, bin ich am liebsten draußen. Ich liebe Jungschararbeit,
        spiele Fanfare, Gitarre und seit Kurzem American Football.

        Bei JA-GOTT bin ich für die Homepage und die Android-App verantwortlich. Ich freue mich immer über Feedback und Anregungen.
    </string>
    <string-array name="styletheme_array">
        <item>Hell</item>
        <item>Dunkel</item>
    </string-array>

    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="dark_blue">#252D35</color>
    <color name="light_blue">#495565</color>
    <color name="orange_light">#ED6F6D</color>
    <color name="light_grey">#9A9A9A</color>

    <color name="primary_50">#eae9e9</color>
    <color name="primary_100">#cac9c9</color>
    <color name="primary_300">#848181</color>

    <color name="primary_500">#eae9e9</color>
    <color name="primary_700">#c7c7c7</color>

    <color name="primary_A400">#fdd835</color>
    <color name="primary_A700">#c6a700</color>

    <color name="text_primary_light">#FFFFFF</color>
    <color name="text_primary_dark">#212121</color>
    <color name="text_dark_54">#737373</color>
    <string name="title_activity_jgt_favorite_text">Favorit</string>
    <string name="title_text">Text</string>
    <string name="title_note">Notiz</string>
</resources>
