<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/title_section1"
            android:title="@string/title_section1"
            android:icon="@mipmap/ic_jgt_heute"/>
        <item android:id="@+id/title_section2"
            android:title="@string/title_section2"
            android:icon="@mipmap/ic_jgt_archive"/>
        <item android:id="@+id/title_section3"
            android:title="@string/title_section3"
            android:icon="@mipmap/ic_jgt_team"/>
        <item android:id="@+id/title_section4"
            android:title="@string/title_section4"
            android:icon="@mipmap/ic_jgt_alarm"/>
        <item android:id="@+id/title_section5"
            android:title="@string/title_section5"
            android:icon="@mipmap/ic_jgt_fav" />
    </group>
</menu>